[package]
edition = "2024"
name = "napi-examples_issue-mgr"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
csv = "1.3.1"
dotenv = "0.15.0"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = [
    "napi4",
    "async",
] }
napi-derive = "2.12.2"
rapidfuzz = "0.5.0"
rayon = "1.10.0"
serde = "1.0.219"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "mysql",
    "postgres",
    "sqlite",
] }
tokio = { version = "1.0", features = ["macros"] }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
